Updated app with NetworkRequest architecture and made login work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.amitshekhar.android:android-networking:0.3.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
 }
